[build-system]
requires = [
  "setuptools>=78.0.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "stardicter"
version = "1.2"
authors = [
    { name = "Michal Čihař", email = "michal@cihar.com" },
]
description = "Conversion tools from various formats to StarDict."
keywords = [
    "stardict",
    "dictionary",
]
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = []
license = "GPL-3.0-or-later"
license-files = ["COPYING"]

[dependency-groups]
dev = [
  {include-group = "test"},
]
test = [
    "pytest",
    "pytest-cov"
]

[project.urls]
Homepage = "https://cihar.com/software/slovnik/"
Download = "https://pypi.python.org/pypi/stardicter"

[project.scripts]
sdgen = "stardicter.main:main"

[tool.setuptools]
packages = [
    "stardicter",
]
platforms = [
    "any",
]
include-package-data = false

[tool.setuptools.package-dir]
stardicter = "stardicter"

[tool.setuptools.package-data]
stardicter = [
    "test_*.txt",
]

[tool.check-manifest]
ignore = [
  "*.json",
  "*.yaml",
]
